Update info text

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -111,24 +111,24 @@
           </div>
           <div class="modal-body">
             <h4>Info</h4>
-            Shareloc RLP stellt eine Webkarten-API mit Kartendiensten des
+            <b>Shareloc RLP</b> stellt eine Webkarten-API mit Kartendiensten des
             Landes Rheinland-Pfalz zur Verfügung und ist mit der Software
-            Shareloc realisiert.
+            <a href="http://meggsimum.de/?page_id=272">Shareloc</a> realisiert.
             <br/>
-            Shareloc ist eine Software, die eine einfach zu nutzende Karten-API
-            bereitstellt, um OpenLayers 3 basierte Webkarten zu erstellen und zu
-            teilen - ohne programmieren zu müssen!
+            Shareloc ist eine einfach zu nutzende Karten-API, um OpenLayers 3
+            basierte Webkarten zu erstellen und zu teilen - ohne programmieren
+            zu müssen!
             <br/>
             <br/>
             Mit wenigen Klicks können Sie sich ihre eigene Webkarte mit einem
             der angebotenen Kartenthemen erstellen.
             Weiterhin können Sie einen speziellen Punkt in der Karte, z.B. Ihr
-            Firmenstandort oder einen Treffpunkt mit einem Markersymbol
+            Firmenstandort oder einen Treffpunkt, mit einem Markersymbol
             hervorheben.<br/>
             Shareloc stellt Ihnen einen einfachen Link zu Ihrer individuellen
             Webkarte bereit, so dass Sie dies ganz einfach teilen können, z.B.
             per EMail. Weiterhin stellt Shareloc auch HTML-Code bereit, den Sie
-            nutzen können, um Ihre Webkarte in Ihre eigen Webkarte einzubetten.
+            nutzen können, um Ihre Webkarte in Ihre eigene Webseite einzubetten.
             <br/>
             <br/>
             Sie möchten Ihre eigene Shareloc-Instanz mit Ihren eigenen
@@ -144,7 +144,7 @@
             <br/>
             und ist Open Source (<a href="https://github.com/meggsimum/shareloc/blob/master/LICENSE">BSD Lizenz</a>).
             Der Code ist
-            <a href="https://github.com/meggsimum/shareloc" target="_blank">hier</a>.
+            <a href="https://github.com/meggsimum/shareloc" target="_blank">hier</a>
             verfügbar.
             <h4>Credits</h4>
             Vielen Dank an die Entwickler der großartigen Mapping-Bibliothek
@@ -154,11 +154,11 @@
             Danke an die
             <a href="http://www.lvermgeo.rlp.de">Vermessungs- und Katasterverwaltung Rheinland-Pfalz</a>,
             die Ihre hervorragenden Kartendienste im Zuge der Open Data
-            Initiative frei zur Verfügung stellt
-            <br>
+            Initiative frei zur Verfügung stellt.
+            <br/>
+            <br/>
             Für alle hier genutzten Kartendienste gilt:
-            <pre>© GeoBasis-DE / LVermGeoRP 2016, dl-de/by-2-0,
-http://www.lvermgeo.rlp.de</pre>
+            <pre>© GeoBasis-DE / LVermGeoRP 2016, dl-de/by-2-0, http://www.lvermgeo.rlp.de</pre>
           </div>
         </div>
 
