Update info text

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -115,9 +115,9 @@
             <h4>Info</h4>
             <b>Shareloc RLP</b> stellt eine Webkarten-API mit Kartendiensten des
             Landes Rheinland-Pfalz zur Verfügung und ist mit der Software
-            <a href="http://meggsimum.de/?page_id=272">Shareloc</a> realisiert.
+            <a href="https://meggsimum.de/?page_id=272">Shareloc</a> realisiert.
             <br/>
-            Shareloc ist eine einfach zu nutzende Karten-API, um OpenLayers 3
+            Shareloc ist eine einfach zu nutzende Karten-API, um OpenLayers
             basierte Webkarten zu erstellen und zu teilen - ohne programmieren
             zu müssen!
             <br/>
@@ -141,7 +141,7 @@
              für weitere Informationen.
             <br/>
             <br/>
-            Shareloc wird entwickelt und bereitgestellt von: <br/><a href="http://meggsimum.de/"><img src="res/img/logo-meggsimum.png" alt="meggsimum logo" /></a>.
+            Shareloc wird entwickelt und bereitgestellt von: <br/><a href="https://meggsimum.de/"><img src="res/img/logo-meggsimum.png" alt="meggsimum logo" /></a>.
             <br/>
             <br/>
             und ist Open Source (<a href="https://github.com/meggsimum/shareloc/blob/master/LICENSE">BSD Lizenz</a>).
@@ -150,7 +150,7 @@
             verfügbar.
             <h4>Credits</h4>
             Vielen Dank an die Entwickler der großartigen Mapping-Bibliothek
-            <a href="http://openlayers.org/">OpenLayers 3</a>.
+            <a href="https://openlayers.org/">OpenLayers</a>.
             <br>
             <br>
             Danke an die
