Set default params for RLP
This adds default parameters for RLP, if none are passed as URL hash.
So it is ensured that the map shows RLP as start view.

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -192,7 +192,13 @@
           hashObj = pl.getHashObject();
           params = hashObj;
       } else {
-          params = {};
+          // set default params for RLP
+          params = {
+              X: 7.9486083984375,
+              Y: 49.79544988802772,
+              bgLayer: "rlp.uek",
+              zoom: 8
+          };
       }
 
       var api = new Shareloc.MapApi();
