--- a/tpl/index.html
+++ b/tpl/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Fjalla One">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fjalla One">
 
     <!-- @if NODE_ENV='develop' -->
     <link rel="stylesheet" href="./node_modules/openlayers/dist/ol.css" type="text/css">
@@ -32,14 +32,14 @@
     <link rel="stylesheet" href="./res/css/Shareloc-creator.css">
     <!-- @endif -->
 
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
 
     <title>Shareloc RLP</title>
   </head>
   <body>
     <div id="map">
     </div>
-    <a id="app-logo" href="http://www.meggsimum.de/"
+    <a id="app-logo" href="https://www.meggsimum.de/"
         title="Shareloc by meggsimum - WebGIS and more" target="_blank">
         <img alt="www.meggsimim.de" src="./res/img/meggsimum.png">
     </a>
