--- a/tpl/share.html
+++ b/tpl/share.html
@@ -2,7 +2,7 @@
 /*
  * Shareloc - the free and open map API
  *
- * Copyright (c) 2015-2016 meggsimum, Christian Mayer (http://www.meggsimum.de)
+ * Copyright (c) 2015-present meggsimum, Christian Mayer (https://www.meggsimum.de)
  * Published under the BSD license.
  * See https://github.com/meggsimum/shareloc/blob/master/LICENSE for the full
  * text of the license.
@@ -14,6 +14,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#980606">
+    <meta name="description" content="Shareloc - Free and open map API based on OpenLayers">
+    <meta name="keywords" content="Shareloc, maps, web maps, free, OpenLayers, share, POI">
+
+    <!-- x-platform favicons -->
+    <link rel="icon" type="image/png" href="./shareloc-logo-mini.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#980606">
 
     <!-- @if NODE_ENV='develop' -->
     <link rel="stylesheet" href="./node_modules/openlayers/dist/ol.css" type="text/css">
@@ -38,6 +49,10 @@
     <div id="map"></div>
     <a id="app-logo" class="" href="./" title="Created with Shareloc by meggsimum - WebGIS and more" target="_blank">
         <img alt="Shareloc by www.meggsimum.de" src="res/img/shareloc-logo-mini.png">
+    </a>
+    <a id="cmpy-logo" href="https://www.meggsimum.de/"
+        title="meggsimum - WebGIS and more" target="_blank">
+        <img alt="www.meggsimim.de" src="./res/img/meggsimum.png" width="35">
     </a>
 
     <div style="display: none;">
