Add link to Datenschutzerklaerung to imprint

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -175,6 +175,11 @@
             <br/>
             Für alle hier genutzten Kartendienste gilt:
             <pre>© GeoBasis-DE / LVermGeoRP 2016, dl-de/by-2-0, http://www.lvermgeo.rlp.de</pre>
+
+            <p>
+                <a href="https://meggsimum.de/impressum/" title="Impressum" target="_blank">Impressum</a> |
+                <a href="https://meggsimum.de/datenschutzerklaerung/" title="Datenschutzerklärung">Datenschutzerklärung</a>
+            </p>
           </div>
         </div>
 
