Minor text corrections

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -56,7 +56,7 @@
     <div id="map">
     </div>
     <a id="app-logo" href="https://www.meggsimum.de/"
-        title="Shareloc by meggsimum - WebGIS and more" target="_blank">
+        title="Shareloc von meggsimum - Büro für Geoinformatik" target="_blank">
         <img alt="www.meggsimim.de" src="./res/img/meggsimum.png">
     </a>
     <button type="button" id="info-btn" class="btn btn-s btn-primary" title="Info and credits">
